--- a/Logic.Ui/Logic.Ui.csproj
+++ b/Logic.Ui/Logic.Ui.csproj
@@ -31,14 +31,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base\IViewModel.cs" />
@@ -50,6 +53,8 @@
     <Compile Include="ViewModelLocator.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\NewClientWindowViewModel.cs" />
+    <Compile Include="Wrapper\BookCollectionViewModel.cs" />
+    <Compile Include="Wrapper\BookViewModel.cs" />
     <Compile Include="Wrapper\ClientCollectionViewModel.cs" />
     <Compile Include="Wrapper\ClientViewModel.cs" />
   </ItemGroup>
