--- a/Logic.Ui/Logic.Ui.csproj
+++ b/Logic.Ui/Logic.Ui.csproj
@@ -47,11 +47,13 @@
     <Compile Include="Base\IViewModel.cs" />
     <Compile Include="Base\ViewModelBase.cs" />
     <Compile Include="Base\ViewModelSyncCollection.cs" />
+    <Compile Include="MessageBusMessages\OpenNewBookWindowMessage.cs" />
     <Compile Include="MessageBusMessages\OpenNewClientWindowMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModelLocator.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="ViewModels\NewBookViewModel.cs" />
     <Compile Include="ViewModels\NewClientWindowViewModel.cs" />
     <Compile Include="Wrapper\BookCollectionViewModel.cs" />
     <Compile Include="Wrapper\BookViewModel.cs" />
