--- a/Logic.Ui/Logic.Ui.csproj
+++ b/Logic.Ui/Logic.Ui.csproj
@@ -49,12 +49,14 @@
     <Compile Include="Base\IViewModel.cs" />
     <Compile Include="Base\ViewModelBase.cs" />
     <Compile Include="Base\ViewModelSyncCollection.cs" />
+    <Compile Include="MessageBusMessages\OpenBookSearchWindowMessage.cs" />
     <Compile Include="MessageBusMessages\OpenNewErrorWindowMessage.cs" />
     <Compile Include="MessageBusMessages\OpenNewTexBookCollectionWindowMessage.cs" />
     <Compile Include="MessageBusMessages\OpenPrintServiceWindowMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModelLocator.cs" />
+    <Compile Include="ViewModels\BookSearchWindowViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\TexBookCollectionWindowViewModel.cs" />
     <Compile Include="ViewModels\PrintServiceWindowViewModel.cs" />
