--- a/Ui.Desktop/Ui.Desktop.csproj
+++ b/Ui.Desktop/Ui.Desktop.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ErrorWindow.xaml.cs">
       <DependentUpon>ErrorWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="NewBookEnty.xaml.cs" />
     <Compile Include="TexBookCollectionWindow.xaml.cs">
       <DependentUpon>TexBookCollectionWindow.xaml</DependentUpon>
     </Compile>
@@ -75,6 +76,10 @@
     <Page Include="MainWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="NewBookEntry.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="PrintServiceWindow.xaml">
       <SubType>Designer</SubType>
