--- a/Ui.Desktop/Ui.Desktop.csproj
+++ b/Ui.Desktop/Ui.Desktop.csproj
@@ -61,7 +61,7 @@
     <Compile Include="ErrorWindow.xaml.cs">
       <DependentUpon>ErrorWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="NewBookEnty.xaml.cs" />
+    <Compile Include="NewBookEntryWindow.xaml.cs" />
     <Compile Include="TexBookCollectionWindow.xaml.cs">
       <DependentUpon>TexBookCollectionWindow.xaml</DependentUpon>
     </Compile>
@@ -77,7 +77,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="NewBookEntry.xaml">
+    <Page Include="NewBookEntryWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
