--- a/Logic.Ui/Logic.Ui.csproj
+++ b/Logic.Ui/Logic.Ui.csproj
@@ -58,6 +58,7 @@
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModelLocator.cs" />
     <Compile Include="ViewModels\BookSearchWindowViewModel.cs" />
+    <Compile Include="Wrapper\DimensionViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\NewBookWindowViewModel.cs" />
     <Compile Include="ViewModels\TexBookCollectionWindowViewModel.cs" />
